profile picture activity connected to menu! https://www.youtube.com/watch?v=fqZDL8XsWHc // https://github.com/hdodenhof/CircleImageView

--- a/app/src/main/res/layout/activity_mandarin_oriental_desc.xml
+++ b/app/src/main/res/layout/activity_mandarin_oriental_desc.xml
@@ -79,6 +79,9 @@
         app:iss_period="1500"
 
 
-        />
+        >
+
+    </com.denzcoskun.imageslider.ImageSlider>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
