--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -5,35 +5,52 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ProfileActivity"
-    android:gravity="center"
     android:orientation="vertical"
-
+    android:background="@drawable/welcomebg"
 
     >
 
-    <Button
+
+    <TextView
+        android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Take Picture"
-        android:id="@+id/buttonCamera"
-
+        android:text="Your new profile picture will appear below"
+        android:gravity="center"
+        android:textColor="@color/black"
         />
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Open Gallery"
-        android:id="@+id/buttonGallery"
 
-        />
-
-    <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:src="@drawable/ronaldo"
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/imageViewProfile"
-        android:layout_marginTop="50dp"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_marginTop="56dp"
+        android:layout_marginBottom="56dp"
+        android:layout_gravity="center"
+    />
+    <Button
+        android:id="@+id/buttonCamera"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#3C3C3C"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:text="Take Picture"
+        android:gravity="center"
 
         />
+
+    <Button
+        android:id="@+id/buttonGallery"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#3C3C3C"
+        android:layout_marginRight="30dp"
+        android:layout_marginLeft="30dp"
+        android:gravity="center"
+
+        android:text="Open Gallery" />
+
 
 </LinearLayout>
