--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -17,10 +17,10 @@
         android:padding="15dp"
         android:hint="Username"
         android:textSize="18sp"
-
-
-
+        android:drawableLeft="@drawable/ic_baseline_person_24"
+        android:drawablePadding="18dp"
         />
+
     <EditText
         android:id="@+id/editTextTextEmailAddress2"
         android:layout_width="match_parent"
@@ -29,9 +29,8 @@
         android:padding="15dp"
         android:hint="Email"
         android:textSize="18sp"
-
-
-
+        android:drawableLeft="@drawable/ic_baseline_email_24"
+        android:drawablePadding="18dp"
         />
 
     <EditText
@@ -42,7 +41,8 @@
         android:hint="Password"
         android:padding="15dp"
         android:textSize="18sp"
-
+        android:drawableLeft="@drawable/ic_baseline_lock_24"
+        android:drawablePadding="18dp"
         />
 
     <Button
